Fix scrollAllVisible

--- a/base.css
+++ b/base.css
@@ -731,7 +731,7 @@
   .react-tab-panel__tab-strip-scroll-tool--right {
     right: 0px; }
   .react-tab-panel__tab-strip-scroll-tool--disabled {
-    opacity: 0.3; }
+    opacity: 0.5; }
   .react-tab-panel__tab-strip-scroll-tool--hidden {
     display: none; }
 
