--- a/theme/default.css
+++ b/theme/default.css
@@ -1,28 +1,6 @@
 .react-tab-panel--theme-default .react-tab-panel__body {
   padding: 5px 10px; }
 
-.react-tab-panel--theme-default .react-tab-panel__tab-strip-scroll-tool {
-  background: #f9f9f9;
-  border: 1px solid #ddd;
-  fill: #ddd;
-  padding: 0px;
-  cursor: pointer; }
-  .react-tab-panel--theme-default .react-tab-panel__tab-strip-scroll-tool:not(.react-tab-panel__tab-strip-scroll-tool--hidden) {
-    display: -webkit-inline-box;
-    display: -webkit-inline-flex;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    -webkit-flex-flow: row;
-        -ms-flex-flow: row;
-            flex-flow: row;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center; }
-  .react-tab-panel--theme-default .react-tab-panel__tab-strip-scroll-tool:hover {
-    fill: #4d7496;
-    background: #eee; }
-
 .react-tab-panel--theme-default .react-tab-panel__body--tab-position-top {
   border-right: 1px solid #ddd;
   border-left: 1px solid #ddd;
@@ -49,6 +27,34 @@
   -webkit-flex: none;
       -ms-flex: none;
           flex: none; }
+
+.react-tab-panel__tab-strip--theme-default .react-tab-panel__tab-strip-scroll-tool {
+  background: #f9f9f9;
+  border: 1px solid #ddd;
+  fill: #ddd;
+  padding: 0px;
+  cursor: pointer; }
+  .react-tab-panel__tab-strip--theme-default .react-tab-panel__tab-strip-scroll-tool--disabled {
+    cursor: inherit;
+    opacity: inherit; }
+  .react-tab-panel__tab-strip--theme-default .react-tab-panel__tab-strip-scroll-tool:not(.react-tab-panel__tab-strip-scroll-tool--hidden) {
+    display: -webkit-inline-box;
+    display: -webkit-inline-flex;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-flex-flow: row;
+        -ms-flex-flow: row;
+            flex-flow: row;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .react-tab-panel__tab-strip--theme-default .react-tab-panel__tab-strip-scroll-tool:hover:not(.react-tab-panel__tab-strip-scroll-tool--disabled) {
+    fill: #4d7496;
+    background: #eee; }
+
+.react-tab-panel__tab-strip--theme-default.react-tab-panel__tab-strip--tab-position-top .react-tab-panel__tab-strip-scroll-tool--disabled svg {
+  opacity: 0.5; }
 
 .react-tab-panel__tab-strip--theme-default .react-tab-panel__tab-title-inner {
   padding: 5px 10px;
